{
    "name": "Controls",
    "maps": [
        {
            "name": "FightingControls",
            "id": "e49d4137-a460-4e48-aece-49c8d3e50b02",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "f40e55ab-956e-44eb-8f13-c4e6a8215300",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "c33269fc-3e7f-4710-9da6-83a61571bd64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftStick",
                    "type": "Value",
                    "id": "ec74f970-06e7-4cfa-8618-c6c722f90937",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "27e9a881-faa4-44f2-a641-25ca7e6948aa",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76cadf40-7661-4943-a2f7-634ffaa4a922",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0d6612d-5992-4db1-a91a-88ee0694098a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}